--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-Hello World, I am rahul naam to suna hi hogals
+<html>
+<body>
+<center><h1>Hello World, I am rahul naam to suna hi hoga</h1></center>
+</body>
+</html>
+
