portfolio removed for later update

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
                 <a class="pt-trigger" href="#services">Services</a>
               </li>
               <li>
-                <a class="pt-trigger" href="#portfolio">Portfolio</a>
+                <!-- <a class="pt-trigger" href="#portfolio">Portfolio</a> -->
+                <a class="pt-trigger">Portfolio</a>
               </li>
               <li>
                 <a class="pt-trigger" href="#blog">Blog</a>
