--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <a href="https://twitter.com/workrahul22"><i class="fa fa-twitter"></i></a> 
                         <a href="https://www.linkedin.com/in/rahul-ranjan-9b3416b7/" target="_blank"><i class="fa fa-linkedin"></i></a>
                         <a href="https://github.com/workrahul22"><i class="fa fa-github"></i></a>
-                        <a href="https://fb.com/santoshray02" target="_blank"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/people/Rahul-Ranjan/100011375382305" target="_blank"><i class="fa fa-facebook"></i></a>
                       </div>
                     </div>
                   </div>
